Don't do shrink-to-fit reflow for replaced elements (regression). b=279579 r+sr=bzbarsky